--- a/index.html
+++ b/index.html
@@ -4,14 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/lib/bootstrap.min.css">
-    <link rel="stylesheet" href="css/lib/semantic.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.4/semantic.min.css">
     <link rel="stylesheet" href="css/main.css">
     <title>Document</title>
 </head>
 <body>
-    <script src="js/lib/jquery-3.1.1.min.js" type="javascript"></script>
-    <script src="js/lib/semantic.min.js" type="javascript"></script>
-    <script src="js/app.js" type="javascript"></script>
+
+    <div class="container-fluid">
+        <div class="container main">
+            <div id="searchWrap" class="ui massive fluid icon input center-block">
+              <input id="search" type="text" placeholder="Search...">
+              <i class="inverted circular pink search link icon"></i>
+            </div>
+            <div class="text-center">
+                <div class="rdm-btn center-block">
+                    <a id="random" class=" ui inverted basic pink button" href="https://en.wikipedia.org/wiki/Special:Random">Random Quote</a>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <script src="js/lib/jquery-3.1.1.min.js" type="text/javascript"></script>
+    <script src="js/app.js" type="text/javascript"></script>
 </body>
 </html>
