Removed css lib, begin work on api call

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="text-center">
                 <div class="rdm-btn center-block">
-                    <a id="random" class=" ui inverted basic pink button" href="https://en.wikipedia.org/wiki/Special:Random">Random Quote</a>
+                    <a id="random" class=" ui inverted basic pink button" href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">Random Quote</a>
                 </div>
 
             </div>
