Added search on enter event, some styling

--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
 
     <div class="container-fluid">
         <div class="container main">
-            <div id="searchWrap" class="ui big fluid action input center-block">
-                <input id="search" type="text" placeholder="Search...">
+            <h1 class="text-center" >I want to learn about</h1>
+            <div id="searchWrap" class="ui massive fluid action input center-block">
+                <input id="input" type="text" placeholder="Search...">
                 <button class="ui pink icon button">
-                    <i id="searchIcon" class="search link icon"></i>
+                    <i id="search" class="search link icon"></i>
                 </button>
             </div>
             <div class="text-center">
                 <div class="rdm-btn center-block">
-                    <a id="random" class=" ui inverted basic pink button" href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">Random Quote</a>
+                    <a id="random" class=" ui violet button" href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">Random Quote</a>
                 </div>
             </div>
             <div id="output">
