Added media query (max-width:767px), img, styling

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
     <div class="container-fluid">
         <div class="container main">
-            <h1 class="text-center" >I want to learn about</h1>
-            <div id="searchWrap" class="ui massive fluid action input center-block">
+            <h1 id="heading" class="text-center" >Wiki Search</h1>
+            <img id="img" class="center-block" src="img/sci.png" alt="">
+            <div id="searchWrap" class="ui big fluid action input center-block">
                 <input id="input" type="text" placeholder="Search...">
                 <button class="ui pink icon button">
                     <i id="search" class="search link icon"></i>
@@ -24,12 +25,13 @@
             </div>
             <div class="text-center">
                 <div class="rdm-btn center-block">
-                    <a id="random" class=" ui violet button" href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">Random Quote</a>
+                    <a id="random" class="ui violet button" href="https://en.wikipedia.org/wiki/Special:Random" target="_blank">Surprise Me!</a>
                 </div>
             </div>
             <div id="output">
 
             </div>
+            <a class="highlight pull-right" href='http://www.freepik.com/free-vector/science-research-study_721894.htm' target="_blank"><span class="white">Img by </span>Freepik</a>
         </div>
     </div>
 
